--- a/data_download.ipynb
+++ b/data_download.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "5601040c",
    "metadata": {},
    "outputs": [
@@ -11,8 +11,8 @@
      "output_type": "stream",
      "text": [
       "Downloading asl-alphabet.zip to data\n",
-      "100%|██████████████████████████████████████| 1.03G/1.03G [00:21<00:00, 55.5MB/s]\n",
-      "100%|██████████████████████████████████████| 1.03G/1.03G [00:21<00:00, 52.1MB/s]\n"
+      "100%|█████████████████████████████████████▊| 1.02G/1.03G [00:20<00:00, 58.0MB/s]\n",
+      "100%|██████████████████████████████████████| 1.03G/1.03G [00:20<00:00, 54.4MB/s]\n"
      ]
     }
    ],
@@ -23,8 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "cf80bf5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_img_directory = \"data/asl_alphabet_train/asl_alphabet_train/\"\n",
+    "test_img_directory = \"data/asl_alphabet_test/asl_alphabet_test/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8fddf41",
    "metadata": {},
    "outputs": [],
    "source": []
