--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "id": "71e7d788",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "id": "d03c8fb3",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
+   "id": "6b2416bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_img_directory = 'data/train'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "576dda14",
    "metadata": {},
    "outputs": [
@@ -47,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "id": "5a058d6c",
    "metadata": {},
    "outputs": [
@@ -98,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9903ffa9",
    "metadata": {},
    "outputs": [
@@ -183,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "fb8a0263",
    "metadata": {},
    "outputs": [
@@ -286,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "id": "5e1265e3",
    "metadata": {},
    "outputs": [
@@ -320,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "d8721201",
    "metadata": {},
    "outputs": [
@@ -343,11 +353,8 @@
     }
    ],
    "source": [
-    "# from tensorflow.keras.utils import load_img, img_to_array\n",
     "from tensorflow.keras.preprocessing.image import load_img, img_to_array\n",
-    "# (\n",
-    "#     path, grayscale=False, color_mode=\"rgb\", target_size=None, interpolation=\"nearest\"\n",
-    "# )\n",
+    "\n",
     "image = load_img('data/train/C/C2.jpg')\n",
     "input_arr = img_to_array(image)\n",
     "input_arr = np.array([input_arr]) # adding one more dimension to add it to the batch \n",
@@ -366,10 +373,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "392ff14a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 200, 200)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "input_arr[0].transpose(2, 0, 1).shape"
    ]
@@ -384,7 +402,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
+   "id": "be0ddd07",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "4ee8d4c3",
    "metadata": {},
    "outputs": [
@@ -400,8 +426,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-21 12:58:09.451733: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:306] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
-      "2022-11-21 12:58:09.453786: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:272] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+      "2022-12-13 10:58:55.453611: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:306] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2022-12-13 10:58:55.454222: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:272] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
      ]
     }
    ],
@@ -416,7 +442,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
+   "id": "fb0ee605",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "65574324",
    "metadata": {},
    "outputs": [
@@ -424,7 +458,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-21 12:58:10.907072: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "2022-12-13 11:01:42.267040: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
      ]
     },
     {
@@ -457,6 +491,49 @@
     "        break\n",
     "    else:\n",
     "        end += 32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "77357c00",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IsADirectoryError",
+     "evalue": "[Errno 21] Is a directory: 'data/train/N'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIsADirectoryError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [17], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m fnames\n\u001b[1;32m      6\u001b[0m img_path \u001b[38;5;241m=\u001b[39m fnames[\u001b[38;5;241m3\u001b[39m]                                           \n\u001b[0;32m----> 8\u001b[0m img \u001b[38;5;241m=\u001b[39m \u001b[43mimage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_img\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m150\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m150\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m          \n\u001b[1;32m     10\u001b[0m x \u001b[38;5;241m=\u001b[39m image\u001b[38;5;241m.\u001b[39mimg_to_array(img)                                     \n\u001b[1;32m     11\u001b[0m x \u001b[38;5;241m=\u001b[39m x\u001b[38;5;241m.\u001b[39mreshape((\u001b[38;5;241m1\u001b[39m,) \u001b[38;5;241m+\u001b[39m x\u001b[38;5;241m.\u001b[39mshape)                                   \n",
+      "File \u001b[0;32m~/miniconda/envs/tensorflow/lib/python3.9/site-packages/keras/utils/image_utils.py:422\u001b[0m, in \u001b[0;36mload_img\u001b[0;34m(path, grayscale, color_mode, target_size, interpolation, keep_aspect_ratio)\u001b[0m\n\u001b[1;32m    420\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(path, pathlib\u001b[38;5;241m.\u001b[39mPath):\n\u001b[1;32m    421\u001b[0m         path \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(path\u001b[38;5;241m.\u001b[39mresolve())\n\u001b[0;32m--> 422\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m    423\u001b[0m         img \u001b[38;5;241m=\u001b[39m pil_image\u001b[38;5;241m.\u001b[39mopen(io\u001b[38;5;241m.\u001b[39mBytesIO(f\u001b[38;5;241m.\u001b[39mread()))\n\u001b[1;32m    424\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[0;31mIsADirectoryError\u001b[0m: [Errno 21] Is a directory: 'data/train/N'"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow.keras.preprocessing import image                           \n",
+    "\n",
+    "fnames = [os.path.join(train_img_directory, fname) for\n",
+    "     fname in os.listdir(train_img_directory)]\n",
+    "fnames\n",
+    "img_path = fnames[3]                                           \n",
+    "\n",
+    "img = image.load_img(img_path, target_size=(150, 150))          \n",
+    "\n",
+    "x = image.img_to_array(img)                                     \n",
+    "x = x.reshape((1,) + x.shape)                                   \n",
+    "\n",
+    "i = 0                                                           \n",
+    "for batch in datagen.flow(x, batch_size=1):                     \n",
+    "    plt.figure(i)                                               \n",
+    "    imgplot = plt.imshow(image.array_to_img(batch[0]))          \n",
+    "    i += 1                                                      \n",
+    "    if i % 4 == 0:                                              \n",
+    "        break                                                   \n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
