--- a/data_download.ipynb
+++ b/data_download.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "5601040c",
    "metadata": {},
    "outputs": [
@@ -43,8 +43,8 @@
      "output_type": "stream",
      "text": [
       "Downloading asl-alphabet.zip to data\n",
-      "100%|█████████████████████████████████████▊| 1.02G/1.03G [00:22<00:00, 46.1MB/s]\n",
-      "100%|██████████████████████████████████████| 1.03G/1.03G [00:22<00:00, 49.5MB/s]\n"
+      " 99%|█████████████████████████████████████▊| 1.02G/1.03G [00:32<00:00, 51.6MB/s]\n",
+      "100%|██████████████████████████████████████| 1.03G/1.03G [00:32<00:00, 34.3MB/s]\n"
      ]
     }
    ],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "434f764d",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "887fcf0a",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 4,
+   "id": "b2b252f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_img_directory = 'data/train'\n",
+    "test_img_directory = 'data/test'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "cf1550dd",
    "metadata": {},
    "outputs": [
@@ -87,7 +98,7 @@
      "text": [
       "The number of training images data is 87000\n",
       "The number of labels is 29\n",
-      "The number of test images data is 28\n"
+      "The number of test images data is 29\n"
      ]
     }
    ],
@@ -112,18 +123,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 6,
    "id": "cb9fd0fa",
    "metadata": {},
    "outputs": [],
    "source": [
     "import PIL\n",
-    "import PIL.Image"
+    "import PIL.Image\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 7,
    "id": "ef04f6ff",
    "metadata": {},
    "outputs": [
@@ -145,7 +157,7 @@
     "    images_list = list(alphabet.glob('*'))\n",
     "    if images_list:\n",
     "        img = PIL.Image.open(images_list[0])\n",
-    "        plt.subplot(4, 8, idx)\n",
+    "        plt.subplot(4, 8, idx+1)\n",
     "        plt.title(label)\n",
     "        plt.axis('off')\n",
     "        plt.imshow(img)"
