--- a/Model_1.ipynb
+++ b/Model_1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "3ab7a041",
+   "id": "dbb1f8cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "340298a0",
+   "id": "1dea56b7",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2d6cd4b9",
+   "id": "4c28b330",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7c2612eb",
+   "id": "10d8baf5",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "124121fb",
+   "id": "e22e647e",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "faa7a08f",
+   "id": "840b3d71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "bf865361",
+   "id": "780db242",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "30dd8a38",
+   "id": "b4b9452c",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ed046c9e",
+   "id": "57df7cfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "13d96b25",
+   "id": "27e4eac8",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "875fea31",
+   "id": "ca79d953",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a2b76c01",
+   "id": "b472b19c",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "06bd3ad4",
+   "id": "cd99ff98",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "bd3289f4",
+   "id": "15eac1aa",
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "24e80709",
+   "id": "c5d68caa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "732e9bdb",
+   "id": "c693e2e0",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "7a362d6c",
+   "id": "f1ebc3d4",
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "eed5e183",
+   "id": "543c2499",
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "4052cdc0",
+   "id": "6677f0b8",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "5ece7b9a",
+   "id": "b96cdbe3",
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "d323c5a5",
+   "id": "8728c545",
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "4fd45f7f",
+   "id": "3989efc2",
    "metadata": {},
    "outputs": [
     {
@@ -689,8 +689,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "0a0ed566",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('model/model_1')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
-   "id": "bb5d9ec2",
+   "id": "175f28ed",
    "metadata": {},
    "outputs": [],
    "source": [
